welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:13: error: method move has return statement; needs result type
		return
                ^